--- a/style/style.css
+++ b/style/style.css
@@ -348,8 +348,12 @@ nav.active {
     height: 30vh;
 }
 
-.project {
+.sectionProjects a {
     flex-basis: 30.1%;
+    background-color: transparent;
+}
+
+.project {
     height: 10vh;
     text-align: center;
     line-height: 10vh;
@@ -361,8 +365,18 @@ nav.active {
     font-size: 1.6rem;
 }
 
-.project:nth-child(odd) {
+.projectBgc {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
     background-color: #F7CB15;
+    z-index: -1;
+}
+
+a:nth-child(even) .projectBgc {
+    background-color: transparent;
 }
 
 /* CONTACT */
