--- a/style/media.css
+++ b/style/media.css
@@ -2,6 +2,10 @@
     .me a {
         font-size: 1.5rem;
     }
+
+    .photos h2{
+        font-size: 4rem;
+    }
 }
 
 @media (min-width: 768px) and (orientation: portrait) {
