--- a/style/style.css
+++ b/style/style.css
@@ -247,6 +247,8 @@ nav.active {
     color: #f7df1e;
 }
 
+/* GALLERY */
+
 .photos-wrap {
     height: 100vh;
 }
@@ -303,6 +305,12 @@ nav.active {
     width: 100%;
     background-color: rgba(0, 0, 0, .6);
     position: relative;
+}
+
+.bgc a {
+    display: block;
+    width: 100%;
+    height: 100%;
 }
 
 .bgc p {
