--- a/projects/darkTheme/style.css
+++ b/projects/darkTheme/style.css
@@ -91,6 +91,11 @@ p {
     text-align: left;
 }
 
+a{
+    text-decoration: none;
+    color: var(--color-main);
+}
+
 main button {
     background: var(--color-main);
     border: solid 0.3vw;
@@ -108,6 +113,10 @@ main button {
 main button:hover {
     background: var(--color-main);
     color: var(--color-bg);
+}
+
+main button:hover a{
+    color: var(--color-bg)
 }
 
 /* LIGHT MODE */
@@ -149,6 +158,7 @@ body.dark .icon::after{
     left: -5px;
     top: 0;
 }
+
 
 @media (prefers-color-scheme: dark){
     body { 
